fix #30, also fix overflow bug on results

--- a/StreamSurfer/wwwroot/css/home.css
+++ b/StreamSurfer/wwwroot/css/home.css
@@ -198,5 +198,4 @@
     font-weight: 900;
     padding: 1em;
     color: #E7E6D6;
-    overflow: hidden;
 }
